# bitwarden-autotype

./: .gitignore  Cargo.toml  LICENSE  README.md  bitwarden-autotype.iss  build.rs  release.toml
.github/workflows/: build.yml
assets/: icon.xcf
src/: bw_cli.rs  gui.rs  hotkeys.rs  main.rs  tray.rs  typing.rs
