[package]
name = "bitwarden-autotype"
version = "0.1.0"
authors = ["MCOfficer <mcofficer@gmx.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
duct = "0.13"
fern = { version = "0.6", features = ["date-based"], default_features = false }
lazy_static = "1.4"
log = "0.4"
native-windows-gui = { version = "1.0", default_features = false }
native-windows-derive = "1.0"
winrt-notification = "0.3.1"
parking_lot = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strfmt = "0.1"
winapi = "0.3"
win_key_codes = "0.1.2"
winput = "0.2"
